# Agents

./: .coverage  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .markdownlint.jsonc  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  HARNESS_SPEC.md  MAINTAINERS.md  Makefile  NEXT_STEPS.md  README.md  SECURITY.md  SUPPORT.md  agent.md  architecture.mmd  architecture.yaml  features.schema.json  features.yaml  merge_outcomes.jsonl  mkdocs.yml  progress.md  pyproject.toml  pyrightconfig.json  requirements.txt
.claude/: settings.json
agent-core/: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  GAP_ANALYSIS.md  LICENSE  Makefile  README.md  pyproject.toml
agent-core/agent_core/: __init__.py  async_loop.py  atomic_io.py  audit_sampler.py  budget.py  calibration.py  calibration_report.py  config.py  detectors.py  domains.py  golden.py  jsonl.py  logging_util.py  loop.py  merge_gate.py  merge_gate_ci.py  merge_seed.py  outcome_labeller.py  outcome_store.py  persistence.py  protocols.py  recalibration.py  sanitize.py  stop.py  store_sync.py  subprocess_util.py  timeutil.py  version.py
agent-core/agent_core/store_sync/: __init__.py  __main__.py  git_sync.py  models.py  serialization.py  store.py
agent-core/docs/: sanitizer-threat-model.md
agent-core/scripts/: quality-gate.sh
agent-core/tests/: conftest.py  gitrepo.py  public_surface_baseline.json  test_async_loop.py  test_atomic_io.py  test_audit_sampler.py  test_backwards_compat.py  test_budget.py  test_calibration.py  test_calibration_report.py  test_config.py  test_detectors.py  test_domains.py  test_golden.py  test_jsonl.py  test_loop.py  test_merge_gate.py  test_merge_gate_ci.py  test_merge_seed.py  test_meta.py  test_outcome_labeller.py  test_outcome_store.py  test_packaging.py  test_persistence.py  test_property.py  test_public_surface.py  test_recalibration.py  test_revisions.py  test_sanitize.py  test_stop.py  test_store_sync.py  test_subprocess_util.py  test_timeutil.py  test_validation_and_logging.py
behavioral-regression/: CHANGELOG.md  GAP_ANALYSIS.md  Makefile  README.md  pyproject.toml
behavioral-regression/behavioral_regression/: __init__.py  __main__.py  canary.py  cli.py  config.py  dashboard.py  detector.py  gate.py  generator.py  judge.py  oracle.py  pipeline.py  report.py  version.py
behavioral-regression/scripts/: quality-gate.sh
behavioral-regression/tests/: conftest.py  public_surface_baseline.json  test_canary.py  test_cli.py  test_config.py  test_detector.py  test_gate.py  test_generator.py  test_judge.py  test_oracle.py  test_pipeline.py  test_report.py  test_version.py
claude-foundation/: .gitignore  .mcp.json.example  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
claude-foundation/.claude-plugin/: marketplace.json  plugin.json
claude-foundation/.github/workflows/: ci.yml
claude-foundation/agents/: explorer.md  test-runner.md
claude-foundation/docs/: VERIFY_CMD_GUIDE.md  architecture.md  sources.md
claude-foundation/docs/adr/: 0001-plugin-plus-marketplace-packaging.md  0002-hook-fail-modes.md  0003-eval-integration-and-stdlib-logging.md  0004-backwards-compat-manifest-diff.md
claude-foundation/hooks/: _lib.py  hooks.json  post_edit_verify.py  pre_tool_guard.py  session_logger.py
claude-foundation/scripts/: quality-gate.sh
claude-foundation/skills/c4-docs/: SKILL.md
claude-foundation/skills/code-review/: SKILL.md
claude-foundation/skills/plan/: SKILL.md
claude-foundation/skills/test-first/: SKILL.md
claude-foundation/tests/: backwards_compat_baseline.json  conftest.py  test_backwards_compat.py  test_eval_gate.py  test_frontmatter.py  test_hooks_e2e.py  test_hooks_unit.py  test_jsonlog.py  test_scan.py  test_schemas.py  test_validate.py
claude-foundation/tests/smoke/: install_smoke.sh
claude-foundation/tools/foundation_tools/: __init__.py  backwards_compat.py  eval_gate.py  frontmatter.py  jsonlog.py  scan.py  schemas.py  validate.py
experiments/backend-validation/: .dockerignore  .env.example  Makefile  PROBES.yaml  README.md  RUBRIC.md  config.yaml  pyproject.toml
experiments/backend-validation/backend_validation/: __init__.py  airgap.py  cli.py  deploy.py  deploy_phase.py  isolation.py  l2_phase.py  logging_util.py  metrics.py  observables.py  phases.py  procrun.py  registry.py  repetition.py  report.py  report_phase.py  rubric.py  runner.py  settings.py
experiments/backend-validation/deploy/: DIGESTS.md
experiments/backend-validation/schemas/: effort_metrics.schema.json  probes.schema.json
experiments/backend-validation/scripts/: quality-gate.sh
experiments/backend-validation/tests/: conftest.py  test_airgap.py  test_cli.py  test_clients.py  test_controls.py  test_deploy.py  test_deploy_phase.py  test_harness_independence.py  test_isolation.py  test_l2_sink.py  test_logging_util.py  test_metrics.py  test_observables.py  test_phases.py  test_probes.py  test_procrun.py  test_registry.py  test_repetition.py  test_report.py  test_report_phase.py  test_rest.py  test_rubric.py  test_runner.py  test_settings.py
flow-corpus/: CHANGELOG.md  GAP_ANALYSIS.md  Makefile  README.md  pyproject.toml
flow-corpus/data/suites/: sdlc.jsonl
flow-corpus/flow_corpus/: __init__.py  config.py  partition.py  pinning.py  version.py
flow-corpus/flow_corpus/canary/: __init__.py  separation.py  specimens.py
flow-corpus/flow_corpus/crosscheck/: __init__.py  confidence.py
flow-corpus/scripts/: quality-gate.sh
flow-corpus/tests/: conftest.py  public_surface_baseline.json  test_canary.py  test_config.py  test_crosscheck.py  test_holdout.py  test_keying.py  test_logging.py  test_mutation.py  test_oracles.py  test_partition.py  test_pinning.py  test_property.py  test_public_surface.py  test_specimens.py  test_suites.py  test_validation.py
flow-protocol/: CHANGELOG.md  Makefile  NOTICE  README.md  pyproject.toml
flow-protocol/flow_protocol/: __init__.py  contract.py  version.py
flow-protocol/scripts/: quality-gate.sh
flow-protocol/tests/: public_surface_baseline.json  test_contract.py  test_version.py
(+465 files in other folders)
