[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "langfuse-eval-harness"
version = "1.0.0"
description = "Dynamic, modular, backwards-compatible enterprise LLM evaluation harness with first-class Langfuse integration."
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6",
    "pydantic>=2",
]

[project.optional-dependencies]
langfuse = ["langfuse>=2"]
bedrock = ["boto3>=1.34"]
openai = ["openai>=1.0.0", "tenacity>=8.0.0"]
anthropic = ["anthropic>=0.40"]
# Architecture drift gate (dogfoods skills/architecture-drift-guard on this repo).
# grimp is pinned so the extracted import graph — and therefore the gate — is
# reproducible across runs.
archguard = ["grimp==3.14"]
dev = ["pytest>=8", "pytest-cov>=5", "mypy", "ruff", "jsonschema>=4.0"]

[project.scripts]
eval-harness = "eval_harness.cli:main"

# Third-party plugins register themselves via this entry-point group.
# [project.entry-points."eval_harness.plugins"]
# my_scorers = "my_pkg.scorers:register"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["eval_harness"]
omit = ["*/tests/*", "*/scripts/*"]

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ ==",
    "if TYPE_CHECKING:",
]
