[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "langfuse-eval-harness"
version = "1.0.0"
description = "Dynamic, modular, backwards-compatible enterprise LLM evaluation harness with first-class Langfuse integration."
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6",
    "pydantic>=2",
]

[project.optional-dependencies]
langfuse = ["langfuse>=2"]
bedrock = ["boto3>=1.34"]
openai = ["openai>=1.0.0", "tenacity>=8.0.0"]
anthropic = ["anthropic>=0.40"]
# Architecture drift gate (dogfoods skills/architecture-drift-guard on this repo).
# grimp is pinned so the extracted import graph — and therefore the gate — is
# reproducible across runs.
archguard = ["grimp==3.14"]
parquet = ["pyarrow>=14,<20"]
# Arize Phoenix tracing spike (optional, self-hosted, air-gap-isolated). Kept OUT of
# `dev` so the offline test job never needs these — the seam degrades to a no-op when
# absent. `auto_instrument=True` only emits spans for providers whose per-provider
# OpenInference instrumentor is installed, so the harness's OpenAI/Anthropic/Bedrock
# targets each get one. Version floors are the current majors (verified 2026-06-30).
phoenix = [
    "arize-phoenix-otel>=0.16",
    "openinference-instrumentation-openai>=0.1",
    "openinference-instrumentation-anthropic>=1",
    "openinference-instrumentation-bedrock>=0.1.43",
]
# Eval-quality / experiments path (documented, validated live — not exercised by the
# offline spike). Split out because arize-phoenix-evals pulls pandas/numpy and its API
# differs from older releases; resolve against `parquet`'s pyarrow pin on a networked env.
phoenix-evals = ["arize-phoenix-evals>=0.29", "arize-phoenix-client>=2.11"]
# ruff/mypy are pinned (not `>=`) so local and CI format/lint identically — unpinned
# ruff drifted (0.8.0 local vs 0.15.20 CI) and broke `ruff format --check`. Same
# reproducibility rationale as the grimp==3.14 pin above. Bump deliberately, in lockstep.
dev = ["pytest>=8", "pytest-cov>=5", "mypy==2.1.0", "ruff==0.15.20", "jsonschema>=4.0", "anthropic>=0.40", "pyarrow>=14,<20"]

[project.scripts]
eval-harness = "eval_harness.cli:main"

# Third-party plugins register themselves via this entry-point group.
# [project.entry-points."eval_harness.plugins"]
# my_scorers = "my_pkg.scorers:register"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
    "integration: live API tests",
    "slow: tests taking >5s",
]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
# Standalone validation gates bootstrap sys.path before imports (E402) and are
# deliberately named after the feature IDs they gate, e.g. F_013.py (N999).
"scripts/validations/*.py" = ["E402", "N999"]
# Typographic characters (em-dashes, multiplication signs) in script docstring
# prose; not identifiers, no correctness impact.
"scripts/**" = ["RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.10"
# Lets `mypy scripts` resolve the validation gates' runtime `from _common import ...`
# bootstrap imports; explicit_package_bases keeps module naming stable for it.
mypy_path = "scripts/validations"
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

# Known limitation: when phoenix-evals is installed alongside dev, its transitive
# numpy 2.5+ dependency uses Python 3.12 `type` statement syntax in its stubs, and
# mypy under python_version = "3.10" cannot parse them. mypy `follow_imports` in
# `[[tool.mypy.overrides]]` does NOT skip stub parsing, so a per-module override
# can't fix this. eval-harness-ci.yml's test job intentionally does not install
# phoenix-evals (`pip install -e ".[dev,langfuse,openai,parquet]"`), so mypy stays
# green in CI. For local mypy runs with the full extras, either pin the mypy venv
# to CI's install set or bump python_version to 3.12 (revisit after 3.10 EOL).

[tool.coverage.run]
branch = true
source = ["eval_harness"]
omit = ["*/tests/*", "*/scripts/*"]

[tool.coverage.report]
fail_under = 96
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ ==",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "^\\s*\\.\\.\\.$",
]
