[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "langfuse-eval-harness"
version = "1.0.0"
description = "Dynamic, modular, backwards-compatible enterprise LLM evaluation harness with first-class Langfuse integration."
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "pyyaml>=6",
    "pydantic>=2",
]

[project.urls]
Homepage = "https://github.com/ianshank/Agents"
Repository = "https://github.com/ianshank/Agents"
Documentation = "https://github.com/ianshank/Agents/tree/main/docs"
Issues = "https://github.com/ianshank/Agents/issues"
Changelog = "https://github.com/ianshank/Agents/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# Docs site (mkdocs). Docs-only; not needed at runtime or by the offline suite.
docs = ["mkdocs>=1.6", "mkdocs-material>=9"]
langfuse = ["langfuse>=2"]
bedrock = ["boto3>=1.34"]
openai = ["openai>=1.0.0", "tenacity>=8.0.0"]
anthropic = ["anthropic>=0.40"]
# Architecture drift gate (dogfoods skills/architecture-drift-guard on this repo).
# grimp is pinned so the extracted import graph — and therefore the gate — is
# reproducible across runs.
archguard = ["grimp==3.14"]
parquet = ["pyarrow>=14,<20"]
# Arize Phoenix tracing spike (optional, self-hosted, air-gap-isolated). Kept OUT of
# `dev` so the offline test job never needs these — the seam degrades to a no-op when
# absent. `auto_instrument=True` only emits spans for providers whose per-provider
# OpenInference instrumentor is installed, so the harness's OpenAI/Anthropic/Bedrock
# targets each get one. Version floors are the current majors (verified 2026-06-30).
phoenix = [
    "arize-phoenix-otel>=0.16",
    "openinference-instrumentation-openai>=0.1",
    "openinference-instrumentation-anthropic>=1",
    "openinference-instrumentation-bedrock>=0.1.43",
]
# Eval-quality / experiments path (documented, validated live — not exercised by the
# offline spike). Split out because arize-phoenix-evals pulls pandas/numpy and its API
# differs from older releases; resolve against `parquet`'s pyarrow pin on a networked env.
phoenix-evals = ["arize-phoenix-evals>=0.29", "arize-phoenix-client>=2.11"]
# BrainTrust experiment export (optional, additive). Kept OUT of `dev`/the offline test
# job so it never needs the SDK — the `braintrust` sink degrades to a no-op when absent
# (mirrors the phoenix seam). Pinned <1 because braintrust is pre-1.0 (breaking changes
# permitted across minor bumps); bump deliberately after checking the changelog.
braintrust = ["braintrust>=0.27,<1"]
# autoevals scorer bridge. Lightweight (chevron/jsonschema/polyleven/pyyaml — no numpy/
# pandas), and its Heuristic scorers are pure-Python & offline-safe, so — unlike braintrust
# — this extra IS installed in the offline test job (see eval-harness-ci.yml) for real
# coverage of the bridge's happy path. Pinned <1 (pre-1.0).
autoevals = ["autoevals>=0.3,<1"]
# ruff/mypy are pinned (not `>=`) so local and CI format/lint identically — unpinned
# ruff drifted (0.8.0 local vs 0.15.20 CI) and broke `ruff format --check`. Same
# reproducibility rationale as the grimp==3.14 pin above. Bump deliberately, in lockstep.
dev = ["pytest>=8", "pytest-cov>=5", "mypy==2.1.0", "ruff==0.15.20", "jsonschema>=4.0", "anthropic>=0.40", "pyarrow>=14,<20"]

[project.scripts]
eval-harness = "eval_harness.cli:main"

# Third-party plugins register themselves via this entry-point group.
# [project.entry-points."eval_harness.plugins"]
# my_scorers = "my_pkg.scorers:register"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# PEP 561: ship the inline-type marker so downstream type checkers treat
# eval_harness as typed. Without this stanza the marker file is not packaged
# into the wheel (mirrors the sub-packages' package-data declarations).
eval_harness = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
    "integration: live API tests",
    "slow: tests taking >5s",
]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
# C901 enforces the project's cyclomatic-complexity budget (< 15) via mccabe below.
# Note: "D" (pydocstyle) rules are intentionally excluded; docstring-convention
# enforcement was deliberately not adopted per F-037 conventions.
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF", "C901"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.mccabe]
# Functions must stay under the project's cyclomatic-complexity limit of 15
# (max-complexity is the highest ALLOWED value, so 14 fails anything >= 15).
max-complexity = 14

[tool.ruff.lint.per-file-ignores]
# Standalone validation gates bootstrap sys.path before imports (E402) and are
# deliberately named after the feature IDs they gate, e.g. F_013.py (N999).
"scripts/validations/*.py" = ["E402", "N999"]
# One-shot migrations bootstrap sys.path before importing scripts/agent_core modules,
# same as the validation gates above (E402).
"scripts/migrations/*.py" = ["E402"]
# Typographic characters (em-dashes, multiplication signs) in script docstring
# prose; not identifiers, no correctness impact.
"scripts/**" = ["RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.10"
# Package bases for explicit_package_bases (below). mypy picks the longest matching base
# per file.
#   * "src" makes `mypy src/eval_harness` name the package `eval_harness.*` (stripping the
#     `src/` prefix) instead of `src.eval_harness.*`. Without it the same file is reachable
#     both as `src.eval_harness.*` (from the CLI path) and as `eval_harness.*` (via the
#     editable install, which mypy follows now that the package ships `py.typed`), producing
#     a "Source file found twice under different module names" error. This is the src-layout
#     fix — no per-file `__init__.py` shim or CI-flag workaround needed.
#   * "scripts/validations" lets `mypy scripts` resolve the validation gates' runtime
#     `from _common import ...` bootstrap imports.
mypy_path = ["src", "scripts/validations"]
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

# Known limitation: when phoenix-evals is installed alongside dev, its transitive
# numpy 2.5+ dependency uses Python 3.12 `type` statement syntax in its stubs, and
# mypy under python_version = "3.10" cannot parse them. mypy `follow_imports` in
# `[[tool.mypy.overrides]]` does NOT skip stub parsing, so a per-module override
# can't fix this. eval-harness-ci.yml's test job intentionally does not install
# phoenix-evals (`pip install -e ".[dev,langfuse,openai,parquet]"`), so mypy stays
# green in CI. For local mypy runs with the full extras, either pin the mypy venv
# to CI's install set or bump python_version to 3.12 (revisit after 3.10 EOL).

[tool.coverage.run]
branch = true
source = ["eval_harness"]
omit = ["*/tests/*", "*/scripts/*"]

[tool.coverage.report]
fail_under = 96
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ ==",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "^\\s*\\.\\.\\.$",
]
