[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-core"
dynamic = ["version"]
description = "Deterministic control & calibration core for a research-assessment agent"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "hypothesis>=6.100", "ruff>=0.6", "mypy>=1.11"]

# Package version is single-sourced from agent_core/version.py (__version__), kept
# distinct from SCHEMA_VERSION (the config-schema version, which may diverge later).
# attr: points at version.py (stdlib-only) so the build does not import the full package.
[tool.setuptools.dynamic]
version = { attr = "agent_core.version.__version__" }

[tool.setuptools.packages.find]
include = ["agent_core*"]

[tool.setuptools.package-data]
agent_core = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["agent_core"]
omit = ["agent_core/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 95
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",                 # Protocol / abstract method bodies
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Tests use throwaway data where explicit-strict zip adds nothing.
"tests/*" = ["B905"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false
