[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-core"
dynamic = ["version"]
description = "Deterministic control & calibration core for a research-assessment agent"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "hypothesis>=6.100", "ruff>=0.15", "mypy>=1.11"]

# Package version is single-sourced from agent_core/version.py (__version__), kept
# distinct from SCHEMA_VERSION (the config-schema version, which may diverge later).
# attr: points at version.py (stdlib-only) so the build does not import the full package.
[tool.setuptools.dynamic]
version = { attr = "agent_core.version.__version__" }

[tool.setuptools.packages.find]
include = ["agent_core*"]

[tool.setuptools.package-data]
agent_core = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers --strict-config"
testpaths = ["tests"]
markers = [
    "slow: long-running tests (deselect with -m 'not slow')",
    "property: Hypothesis property-based tests",
]

[tool.coverage.run]
branch = true
source = ["agent_core"]
omit = ["agent_core/__init__.py", "agent_core/store_sync/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 95
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",                 # Protocol / abstract method bodies
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# C901 enforces the project's cyclomatic-complexity budget (< 15) via mccabe below.
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF", "C901"]

[tool.ruff.lint.mccabe]
# max-complexity is the highest ALLOWED value, so 14 fails anything >= 15.
max-complexity = 14

[tool.ruff.lint.per-file-ignores]
# Tests use throwaway data where explicit-strict zip adds nothing.
"tests/*" = ["B905"]

[tool.mypy]
python_version = "3.10"
strict = true
# tests/ ships no __init__.py, so without explicit bases mypy names its files as
# top-level modules (test_loop, conftest, ...) and the tests.* override below
# silently never matches. Explicit package bases make them resolve as tests.*.
explicit_package_bases = true
mypy_path = "."
ignore_missing_imports = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false

