[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-foundation-tools"
version = "1.0.0"
description = "Validation, scanning, and eval-gate tooling for the foundation Claude Code plugin."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "pyyaml>=6",
]

[project.optional-dependencies]
# ruff/mypy pinned (not >=) so local and CI lint/format identically; bump deliberately,
# in lockstep — same reproducibility rationale as the first consumer (ianshank/Agents).
dev = ["pytest>=8", "pytest-cov>=5", "mypy==2.1.0", "ruff==0.15.20", "types-PyYAML"]

[tool.setuptools]
packages = ["foundation_tools"]
package-dir = { foundation_tools = "tools/foundation_tools" }

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["tools", "tests", "hooks"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
# hooks/ are standalone stdlib scripts loaded by path, not a package; validated by
# `mypy hooks` with explicit bases so _lib resolves the same way it does at runtime.
# tools/ is on the path so `foundation_tools.*` imports resolve without installation.
mypy_path = "hooks:tools"
explicit_package_bases = true

[tool.coverage.run]
branch = true
source = ["foundation_tools", "hooks"]
omit = ["*/tests/*"]

[tool.coverage.report]
# Plan §2.2 requires >80% on hook scripts and tooling core; gate at 85 to match the
# first consumer's operational-scripts floor.
fail_under = 85
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ ==",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "^\\s*\\.\\.\\.$",
]
