[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "flow-corpus"
dynamic = ["version"]
description = "Calibration corpus of agentic flow variants: specimens, task suites, oracles, and the validation runner"
requires-python = ">=3.10"
dependencies = ["pydantic>=2", "flow-protocol", "agent-core"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "hypothesis>=6.100", "ruff>=0.15", "mypy>=1.11"]

[tool.setuptools.dynamic]
version = { attr = "flow_corpus.version.__version__" }

[tool.setuptools.packages.find]
include = ["flow_corpus*"]

[tool.setuptools.package-data]
flow_corpus = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers --strict-config"
testpaths = ["tests"]
markers = [
    "slow: long-running tests (deselect with -m 'not slow')",
    "property: Hypothesis property-based tests",
]

[tool.coverage.run]
branch = true
source = ["flow_corpus"]
omit = ["flow_corpus/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 95
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# C901 enforces the project's cyclomatic-complexity budget (< 15) via mccabe below.
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF", "C901"]

[tool.ruff.lint.mccabe]
# max-complexity is the highest ALLOWED value, so 14 fails anything >= 15.
max-complexity = 14

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B905"]

[tool.mypy]
python_version = "3.10"
strict = true
# tests/ ships no __init__.py, so without explicit bases mypy names its files as
# top-level modules (test_*, conftest) and the tests.* override below silently
# never matches. Explicit package bases make them resolve as tests.*.
explicit_package_bases = true
mypy_path = "."
ignore_missing_imports = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false
