[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "flow-protocol"
dynamic = ["version"]
description = "Versioned contract surface between the flow-calibration corpus and the validation harness"
requires-python = ">=3.10"
dependencies = ["pydantic>=2"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "hypothesis>=6.100", "ruff>=0.15", "mypy>=1.11"]

# Version single-sourced from flow_protocol/version.py (__version__), kept distinct
# from PROTOCOL_VERSION (the wire-contract semver, which may diverge later).
[tool.setuptools.dynamic]
version = { attr = "flow_protocol.version.__version__" }

[tool.setuptools.packages.find]
include = ["flow_protocol*"]

[tool.setuptools.package-data]
flow_protocol = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers --strict-config"
testpaths = ["tests"]
markers = [
    "slow: long-running tests (deselect with -m 'not slow')",
    "property: Hypothesis property-based tests",
]

[tool.coverage.run]
branch = true
source = ["flow_protocol"]
omit = ["flow_protocol/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 95
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B905"]

[tool.mypy]
python_version = "3.10"
strict = true
# tests/ ships no __init__.py, so without explicit bases mypy names its files as
# top-level modules (test_*, conftest) and the tests.* override below silently
# never matches. Explicit package bases make them resolve as tests.*.
explicit_package_bases = true
mypy_path = "."
ignore_missing_imports = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false
